--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8"/>
-    <title>Git 101 boilerplate</title>
+    <title>NOW THIS IS MINE</title>
   </head>
   <body>
     <h1>I was forked/cloned from Github</h1>
-    <p>TODO: change this text!</p>
+    <p>I DID IT !!</p>
   </body>
 </html>
